--- a/bluefish/po/de.po
+++ b/bluefish/po/de.po
@@ -377,7 +377,7 @@ msgstr ""
 
 #: ../src/document.c:2707
 msgid "File has been modified by another process\n"
-msgstr "Datei wurde von einem anderen Prozeß geändert."
+msgstr "Datei wurde von einem anderen Prozeß geändert\n"
 
 #: ../src/document.c:2810
 msgid "searching files..."
