--- a/po/fr.po
+++ b/po/fr.po
@@ -1,3 +1,4 @@
+# translation of 21-11-03_fr.po to français
 # translation of 16-09-03_fr.po to français
 # translation of 04-11-03_fr.po to français
 # translation of 16-09-2003_fr.po to français
@@ -14,10 +15,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: 16-09-03_fr\n"
+"Project-Id-Version: 21-11-03_fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2003-11-20 19:23+0100\n"
-"PO-Revision-Date: 2003-11-17 08:49+0100\n"
+"PO-Revision-Date: 2003-11-21 16:45+0100\n"
 "Last-Translator: Romeo VIU-BERGES <romda@free.fr>\n"
 "Language-Team: français <fr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -221,8 +222,7 @@ msgstr "Vous disposez déjà d'un signet ici !"
 #: ../src/bookmark.c:387
 #, c-format
 msgid "You can overwrite next temp bookmark (number %d). Overwrite?"
-msgstr ""
-"Vous pouvez écraser le signet temporaire suivant (numéro %d). Écraser ?"
+msgstr "Vous pouvez écraser le signet temporaire suivant (numéro %d). Écraser ?"
 
 #: ../src/bookmark.c:388
 msgid "Maximum number of temp bookmarks assigned"
@@ -281,8 +281,7 @@ msgstr "Ouverture du fichier"
 
 #: ../src/document.c:1438
 msgid "Cannot display file, unknown characters found."
-msgstr ""
-"Impossible d'afficher le fichier, des caractères inconnus ont été trouvés."
+msgstr "Impossible d'afficher le fichier, des caractères inconnus ont été trouvés."
 
 #: ../src/document.c:1667
 msgid "Edit tag"
@@ -417,8 +416,7 @@ msgstr ""
 
 #: ../src/document.c:2231
 msgid "Do you want to save the changes made to this untitled file?"
-msgstr ""
-"Désirez-vous enregistrer les changements effectués dans ce fichier sans nom ?"
+msgstr "Désirez-vous enregistrer les changements effectués dans ce fichier sans nom ?"
 
 #: ../src/document.c:2235
 msgid "Do_n't save"
@@ -4227,7 +4225,7 @@ msgstr "Remplacer une seule fois"
 
 #: ../src/specialchar.c:18
 msgid "Insert special character"
-msgstr ""
+msgstr "Insérer un caractère spécial"
 
 #: ../src/stringlist.c:365
 msgid " Add "
@@ -4312,3 +4310,4 @@ msgstr "Source :"
 #: ../src/wizards.c:223
 msgid "Size:"
 msgstr "Taille :"
+
