added 'delete' button, patch from Damien Faurite <damien.faurite@free.fr> and fixed a bug reported again by Damien Faurite
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk/bluefish@1058 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/AUTHORS
+++ b/AUTHORS
@@ -32,7 +32,7 @@ Documentation:
   Daniel Blair <joecamel(at)realcoders.org>
 
 Package Maintainers:
-  Debain:   Davide Puricelli <evo(at)debian.org>
+  Debian:   Davide Puricelli <evo(at)debian.org>
   Redhat:   Matthias Haase <matthias_haase(at)bennewitz.com>
   Mandrake: Todd Lyons <todd(at)mrball.net>
   SuSE:     
