--- a/bluefish/AUTHORS
+++ b/bluefish/AUTHORS
@@ -32,7 +32,7 @@ Documentation:
   Daniel Blair <joecamel(at)realcoders.org>
 
 Package Maintainers:
-  Debain:   Davide Puricelli <evo(at)debian.org>
+  Debian:   Davide Puricelli <evo(at)debian.org>
   Redhat:   Matthias Haase <matthias_haase(at)bennewitz.com>
   Mandrake: Todd Lyons <todd(at)mrball.net>
   SuSE:     
