--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,24 @@
-Main developers:
-  Olivier Sessink <olivier(at)bluefish.openoffice.nl>
-  Jim Hayward <jimhayward(at)linuxexperience.com>
-  Oskar Świda <swida(at)aragorn.pb.bialystok.pl>
-  Christian Tellefsen <christian(at)tellefsen.net>
-  Eugene Morenko(More) <more(at)irpin.com>
+Project leader:
+  Olivier Sessink <olivier@bluefish.openoffice.nl>
+
+Developers for this release:
+  Jim Hayward <jimhayward@linuxexperience.com>
+  Oskar Świda <swida@aragorn.pb.bialystok.pl>
+  Christian Tellefsen <christian@tellefsen.net>
+  Eugene Morenko(More) <more@irpin.com>
+
+Developers for previous releases:
+  Chris Mazuc
+  Neil Millar
+  Gero Takke
+  Bo Forslund
+  David Arno
+  Pablo De Napoli
+  Santiago Capel Torres
+  Rasmus Toftdahl Olesen <rto@pohldata.dk>
+  Roland Steinbach <roland@netzblick.de>
+  Christian Tellefsen <chris@tellefsen.net>
+  Antti-Juhani Kaijanaho
 
 Translators:
   Danish (DA):         Rasmus Toftdahl Olesen <rto(at)pohldata.dk>
@@ -19,7 +34,7 @@ Translators:
   Chinese (zh_CN):     Ting Yang (Dormouse) <mouselinux(at)163.com>
   Finnish (FI):        Juho Roukala <j.mr(at)luukku.com>
 
-Outdated translations (status 04-01-2004):
+Previous translators (translations outdated per 04-01-2004):
   Bulgarian (BG):      Peio Popov <peio(at)peio.org>
   Norwegian (NO):      Christian Tellefsen <chris(at)tellefsen.net>
   Japanese (JA):       Ryoichi INAGAKI <ryo1(at)bc.wakwak.com>
