stripped the licence from the about dialog, and placed the splash screen in the dialog
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk/bluefish@1084 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/AUTHORS
+++ b/AUTHORS
@@ -21,20 +21,22 @@ Developers for previous releases:
   Antti-Juhani Kaijanaho
 
 Translators:
-  Danish (DA):         Rasmus Toftdahl Olesen <rto(at)pohldata.dk>
-  French (FR):         Roméo Viu-Berges <apostledemencia(at)free.fr>
-  German (DE):         Roland Steinbach <roland(at)netzblick.de>
-  Hungarian (HU):      Péter Sáska <sasek(at)ccsystem.hu>
-  Italian (IT):        Stefano Canepa <sc(at)linux.it>
-  Polish (PL):         Oskar Swida <swida(at)aragorn.pb.bialystok.pl>
-  Portuguese (PT_BR):  Anderson Rocha <anderson(at)maxlinux.com.br>
-  Russian (RU):        Eugene Rupakov <rupakov(at)jet.msk.ru>
-  Spanish (ES):        Walter Oscar Echarri <wecharri(at)infovia.com.ar>
-  Swedish (SV):        David Smeringe <david.smeringe(at)telia.com>
-  Chinese (zh_CN):     Ting Yang (Dormouse) <mouselinux(at)163.com>
-  Finnish (FI):        Juho Roukala <j.mr(at)luukku.com>
+  Brazilian Portuguese (PT_BR) -  Anderson Rocha <anderson@maxlinux.com.br>
+  Chinese (zh_CN) -  Ting Yang (Dormouse) <mouselinux@163.com>
+  Danish (DA) -  Rasmus Toftdahl Olesen <rto@pohldata.dk>
+  Finnish (FI) -  Juho Roukala <j.mr@luukku.com>
+  French (FR) -  Roméo Viu-Berges <apostledemencia@free.fr>
+  German (DE) -  Roland Steinbach <roland@netzblick.de>
+  Hungarian (HU) -  Péter Sáska <sasek@ccsystem.hu>
+  Italian (IT) -  Stefano Canepa <sc@linux.it>
+  Polish (PL) -  Oskar Swida <swida@aragorn.pb.bialystok.pl>
+  Portuguese (PT) - Lopo Pizarro <lopopizarro@netcabo.pt>
+  Russian (RU) -  Eugene Rupakov <rupakov@jet.msk.ru>
+  Spanish (ES) -  Walter Oscar Echarri <wecharri@infovia.com.ar>
+  Swedish (SV) -  David Smeringe <david.smeringe@telia.com>
+  Tamil (TA) -  Murugapandian Barathee <barathee@yahoo.com>
 
-Previous translators (translations outdated per 04-01-2004):
+Previous translators (translations outdated):
   Bulgarian (BG):      Peio Popov <peio(at)peio.org>
   Norwegian (NO):      Christian Tellefsen <chris(at)tellefsen.net>
   Japanese (JA):       Ryoichi INAGAKI <ryo1(at)bc.wakwak.com>
@@ -45,6 +47,7 @@ Previous translators (translations outdated per 04-01-2004):
 Documentation:
   Alastair Porter <alastair(at)linuxexperience.com>
   Daniel Blair <joecamel(at)realcoders.org>
+  Denny Reeh
 
 Package Maintainers:
   Debian:   Davide Puricelli <evo(at)debian.org>
