--- a/po/it.po
+++ b/po/it.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bluefish gtk2-port\n"
 "POT-Creation-Date: 2004-02-09 14:34+0100\n"
-"PO-Revision-Date: 2003-11-23 12:58+0100\n"
+"PO-Revision-Date: 2004-02-11 23:00+0100\n"
 "Last-Translator: Stefano Canepa <sc@linux.it>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
 "MIME-Version: 1.0\n"
@@ -18,24 +18,27 @@ msgstr ""
 
 #: ../src/authen.c:73
 msgid "Authentication required"
-msgstr ""
+msgstr "Richiesta autotenticazione"
 
+# W-22PCMCIA
 #: ../src/authen.c:84
-#, c-format
+#, c-format, fuzzy
 msgid ""
 "Authentication is required for %s\n"
 "\n"
 "Realm is %s"
 msgstr ""
+"L'autenticazione è richiesta per %s\n"
+"\n"
+"Reame %s"
 
 #: ../src/authen.c:90
-#, fuzzy
 msgid "Username:"
-msgstr "Rinomina"
+msgstr "Nome utente:"
 
 #: ../src/authen.c:95
 msgid "Password:"
-msgstr ""
+msgstr "Password:"
 
 #: ../src/bfspell.c:346
 msgid "Check Spelling"
@@ -191,9 +194,9 @@ msgid "_Description:"
 msgstr "_Descrizione:"
 
 #: ../src/bookmark.c:390
-#, fuzzy, c-format
+#, c-format
 msgid "You already have a bookmark named %s!"
-msgstr "Segnalibro già presente"
+msgstr "Segnalibro con nome %s già presente"
 
 #: ../src/bookmark.c:465
 msgid "Bookmarked file is closed"
@@ -204,24 +207,21 @@ msgid "Do you want to open it?"
 msgstr "Aprire il file?"
 
 #: ../src/bookmark.c:510
-#, fuzzy, c-format
+#, c-format
 msgid "Do you really want to remove %s?"
-msgstr "Aprire il file?"
+msgstr "Rimuovere %s?"
 
 #: ../src/bookmark.c:511
-#, fuzzy
 msgid "Delete permanent bookmark."
-msgstr "Aggiungi segnalibro temporaneo"
+msgstr "Cancella segnalibro permanente"
 
 #: ../src/bookmark.c:530
-#, fuzzy
 msgid "Rename permanent bookmark"
-msgstr "Aggiungi segnalibro temporaneo"
+msgstr "Rinomina segnalibro permanente"
 
 #: ../src/bookmark.c:532
-#, fuzzy
 msgid "Rename temporary bookmark"
-msgstr "Aggiungi un segnalibro temporaneo"
+msgstr "Rinomina segnalibro permanente"
 
 #: ../src/bookmark.c:549
 msgid "Goto bookmark"
@@ -281,19 +281,16 @@ msgid "Are you sure?"
 msgstr "Sicuri?"
 
 #: ../src/bookmark.c:971
-#, fuzzy
 msgid "Delete all permanent bookmarks."
-msgstr "Cancella tutti i segnalibri temporanei."
+msgstr "Cancella tutti i segnalibri persistenti."
 
 #: ../src/bookmark.c:971
-#, fuzzy
 msgid "Are you REALLY sure?"
 msgstr "Sicuri?"
 
 #: ../src/bookmark.c:979 ../src/document.c:1937
-#, fuzzy
 msgid "Add permanent bookmark"
-msgstr "Aggiungi segnalibro temporaneo"
+msgstr "Aggiungi segnalibro persistente"
 
 #: ../src/bookmark.c:1010
 #, c-format
@@ -301,55 +298,54 @@ msgid ""
 "Character count changed in file\n"
 " %s."
 msgstr ""
+"Il numero di caratteri nel file è cambiato\n"
+" %s."
 
 #: ../src/bookmark.c:1011
 msgid "Bookmarks positions can be incorrect."
-msgstr ""
+msgstr "La poszione dei segnalibri è cambiata."
 
 #: ../src/document.c:253 ../src/gui.c:924 ../src/gui.c:925
 msgid "/Document/Highlight Syntax"
 msgstr "/Documento/Evidenzia sintassi"
 
 #: ../src/document.c:693
-#, fuzzy
 msgid "Name: "
 msgstr "Nome:"
 
 #: ../src/document.c:694
-#, fuzzy
 msgid ""
 "\n"
 "Type: "
-msgstr "_Tipo:"
+msgstr "\nTipo: "
 
 #: ../src/document.c:695
-#, fuzzy
 msgid ""
 "\n"
 "Encoding: "
-msgstr "Codifica"
+msgstr "\nCodifica: "
 
 #: ../src/document.c:698
 msgid ""
 "\n"
 "Size (on disk): "
-msgstr ""
+msgstr "\nDimensione (sul disco): "
 
 #: ../src/document.c:698
 msgid " bytes"
-msgstr ""
+msgstr " byte"
 
 #: ../src/document.c:703
 msgid ""
 "\n"
 "Permissions: "
-msgstr ""
+msgstr "\nPermessi: "
 
 #: ../src/document.c:709
 msgid ""
 "\n"
 "Last modified: "
-msgstr ""
+msgstr "\nModificato l'ultima volta: "
 
 #: ../src/document.c:735
 #, c-format
@@ -384,16 +380,15 @@ msgstr "Sostituisci"
 
 #: ../src/document.c:1930
 msgid "Find"
-msgstr ""
+msgstr "Cerca"
 
 #: ../src/document.c:1948
 msgid "Edit tag"
 msgstr "Modifica il tag"
 
 #: ../src/document.c:1950
-#, fuzzy
 msgid "Edit color"
-msgstr "Editor"
+msgstr "Modifica i colori"
 
 #: ../src/document.c:2085
 msgid "Saving file"
@@ -421,9 +416,8 @@ msgid "File backup failure"
 msgstr "Backup del file fallito"
 
 #: ../src/document.c:2133
-#, fuzzy
 msgid "_Continue save in UTF-8"
-msgstr "_Continua il salvataggio"
+msgstr "_Continua il salvataggio in UTF-8"
 
 #: ../src/document.c:2144
 #, c-format
@@ -433,10 +427,13 @@ msgid ""
 "\n"
 "Continue saving in UTF-8 encoding?"
 msgstr ""
+"Fallimento nel convertire %s nella codifica dei caratter %s. Codifica fallita al carattere \"%s\" alla riga %d colonna %d\n"
+"\n"
+"Continuare a salvare codificato UTF-8?"
 
 #: ../src/document.c:2145
 msgid "File encoding conversion failure"
-msgstr ""
+msgstr "Conversione della codifica del file fallita"
 
 #: ../src/document.c:2280
 msgid "Previously: "
@@ -1309,9 +1306,8 @@ msgid "/Document/Line Numbers"
 msgstr "/Documento/Numeri di riga"
 
 #: ../src/gui.c:929
-#, fuzzy
 msgid "/Document/Auto Close HTML tags"
-msgstr "/Documento/Indenta automaticamente"
+msgstr "/Documento/Chiusura automatica tag HTML"
 
 #: ../src/gui.c:1061
 msgid "Do_n't Save"
@@ -3166,13 +3162,12 @@ msgid "/Dialogs/Form/Option _Group..."
 msgstr "/Dialoghi/Form/Gruppo di op_zioni..."
 
 #: ../src/menu.c:651
-#, fuzzy
 msgid "/Dialogs/sep1"
-msgstr "/Dialoghi/tearoff1"
+msgstr "/Dialoghi/sept1"
 
 #: ../src/menu.c:652
 msgid "/Dialogs/_Edit tag under cursor..."
-msgstr ""
+msgstr "/Dialoghi/Modifica tag sotto il cursor_e..."
 
 #: ../src/menu.c:653
 msgid "/_Document"
@@ -3199,9 +3194,8 @@ msgid "/Document/sep1"
 msgstr "/Documento/sep1"
 
 #: ../src/menu.c:659
-#, fuzzy
 msgid "/Document/Auto Close H_TML tags"
-msgstr "/Documento/Indenta automaticamente"
+msgstr "/Documento/Chiusura automatica tag H_TML"
 
 #: ../src/menu.c:660
 msgid "/Document/_Wrap"
@@ -3228,7 +3222,6 @@ msgid "/Document/sep3"
 msgstr "/Documento/sep3"
 
 #: ../src/menu.c:666
-#, fuzzy
 msgid "/Document/Document Ty_pe"
 msgstr "/Documento/Tipo"
 
@@ -3382,11 +3375,11 @@ msgstr "/Comandi esterni/tearoff1"
 
 #: ../src/menu.c:712
 msgid "/_Help"
-msgstr ""
+msgstr "/A_iuto"
 
 #: ../src/menu.c:713
 msgid "/Help/About..."
-msgstr ""
+msgstr "/A_iuto/Infomazioni"
 
 #: ../src/menu.c:875
 msgid "/Document/Document Type"
@@ -3881,7 +3874,7 @@ msgstr "Usa i tag in stile XHTML (<br />)"
 
 #: ../src/preferences.c:1809
 msgid "Automatic close tags"
-msgstr ""
+msgstr "Chiusura automatica delle schede"
 
 #: ../src/preferences.c:1810
 msgid "Automatic update author meta"
@@ -4117,16 +4110,15 @@ msgstr "Finestra di output"
 
 #: ../src/preferences.c:1983
 msgid "Servers"
-msgstr ""
+msgstr "Server"
 
 #: ../src/preferences.c:1985
-#, fuzzy
 msgid "Remote servers"
-msgstr "Directory _remota:"
+msgstr "Directory remota:"
 
 #: ../src/preferences.c:1990
 msgid "Zope compatibility mode"
-msgstr ""
+msgstr "Modo compatibile Zope"
 
 #: ../src/project.c:62
 msgid "New project"
@@ -4174,12 +4166,10 @@ msgid "Project _Name:"
 msgstr "_Nome del progetto:"
 
 #: ../src/project.c:369
-#, fuzzy
 msgid "_Basedir:"
 msgstr "_Directory di base"
 
 #: ../src/project.c:373
-#, fuzzy
 msgid "_Preview URL:"
 msgstr "Anteprima"
 
